--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-typing-effect": "^2.0.5",
     "scss": "^0.2.4",
     "swiper": "^9.1.1",
